修改图片为风景图片；引入gulp，正式开始对项目进行构建：主要包括CSS压缩，js压缩，sourcemaps启用。

--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/myfancy/myblog.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/myfancy/myblog/issues"
-  },
-  "homepage": "https://github.com/myfancy/myblog#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-imagemin": "^3.1.1"
+    "gulp-babel": "^6.1.2",
+    "gulp-cache": "^0.4.5",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.9.1",
+    "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.4"
+  },
+  "engines": {
+    "node": ">=0.12"
   }
 }
